   doesn't lose changes and can be saved/reverted on exit.
   * @"dbase"/"search"+"field"-"field": prefixes expr to work on other db
   * @dbase on FOREACH switches to alternate database
 * FOREACH supports changing the sort order for foreign or same database
 * Generic SQL exporter (create table & views, import data into table).
 * The automatically generated column field for new items now takes
   multi-column fields into account.
 * fixed loss of digits field on form edit load

Compatibility Issues:

Prior to 2.4, databases were read from .db and then non-.db, in that
order.  Now, it skips the non-.db if it finds .db.  Reading from both
(or the non-.db file at all, for that matter) was never documented
behavior, prone to invisible issues.  To fix, concatenate the non-.db
file with the .db file.  If you really need multiple files, use the
section feature.  The non-.db file should be reserved for procedural
databases, as that is only the the default for them, so if you have
databases that don't have the .db extension, you should rename them as
well.

Prior to 2.4, any templates that use ELSE or ELSEIF will assume these
are non-template expressions, and will result in syntax errors.
FOREACH and END must now be in the same conditional segment. Not doing
so was never really supported, but now it is enforced.  While
foreach() expression strings using explicit braces will continue
working, any which were in reality fixed strings that weren't intended
as expressions will not, and will likely result in a syntax error. Use
of the new other-database prefix will result in syntax errors prior to
2.4.

The foreign database and sort operators in FOREACH will be considered
part of the search string prior to 2.4.  Prior to 2.4, search strings
could begin with @, +, or -.  These are now interpreted as the foreign
database and sort field specifiers.  This will likely result in an
error when running the template, which can be cured by prefiing the